# reimagined-octo-doodle

./: .gitignore  AGENT.md  DEPLOY_MODAL.md  Dockerfile  Makefile  README.md  debug_pypsa.py  docker-compose.yml  modal_llm.py  pyproject.toml  render.yaml
.devcontainer/: devcontainer.json
src/: main.py
src/api/: routes.py
src/digital_twin/: __init__.py  asset_models.py  grid_model.py  station_scenario.py
src/ingestion/: stream_processor.py
src/rag/: engine.py  ingestion.py  llm_client.py
src/templates/: index.html
tests/: test_api.py  test_production.py  test_rag.py  test_twin.py
