[project]
name = "digital-twin-rag"
version = "0.1.0"
description = "Open Source Digital Twin & RAG Agent for Electricity Maintenance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pypsa>=0.26.0",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "netcdf4>=1.6.0",
    "scipy>=1.12.0"
]

[project.optional-dependencies]
ai = [
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "sentence-transformers>=2.5.0",
    "qdrant-client>=1.7.0",
    "faiss-cpu>=1.8.0"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "modal>=0.60.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
